# icca

./: .env.example  .gitignore  CHECKPOINT_HANDOFF_2026-06-06.md  README.md  pyproject.toml
configs/: research_l4.yaml  smoke_cpu.yaml  validation_all_sources.yaml
docs/: DATASETS.md  LIGHTNING_GITHUB_FIX.md  RESEARCH_DESIGN.md
paper/: README.md  icca_paper_skeleton.tex  methodology_diagrams.tex  references.bib
scripts/: run_lightning_l4.sh  setup_lightning_l4.sh  sync_lightning.ps1  sync_lightning.py
src/rf_research/: __init__.py  cli.py  config.py
src/rf_research/data/: __init__.py  catalog.py  dataset.py  fetch.py  manifest.py  readers.py  remote_zip.py  subset_fetch.py
src/rf_research/model/: __init__.py  layers.py  losses.py  network.py
src/rf_research/train/: __init__.py  callbacks.py  module.py  runner.py  tuning.py
tests/: test_manifest.py  test_model.py  test_remote_zip.py
