[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "real-rf-dg"
version = "0.1.0"
description = "Reproducible multi-source real-RF fingerprinting research for ICCA 2026"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
  "lightning>=2.5,<2.7",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "scipy>=1.14",
  "torch>=2.6",
  "torchmetrics>=1.6",
  "tqdm>=4.67",
  "typer>=0.15",
]

[project.optional-dependencies]
wandb = ["wandb>=0.19"]
cloud = ["lightning-sdk>=0.2"]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
rfbench = "rf_research.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rf_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"
cache_dir = ".pytest_cache_local"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
